==> yorange1/OneOS-Lite/drivers/hal/hdsc/drivers/drv_gpio.c <==
#include <os_memory.h>
#include "drv_gpio.h"
#define DBG_TAG "drv_gpio"
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])
#define GPIO_INFO_MAP(gpio)                                                                                               \
{                                                                                                                         \
    gpio_port_map |= (1 << GPIO_INDEX_##gpio);                                                                            \
    gpio_port_base[GPIO_INDEX_##gpio] = GpioPort##gpio;                                                                   \
}

void __os_hw_pin_init(void)
{
#if defined(GPIOA)
    GPIO_INFO_MAP(A);
#endif
#if defined(GPIOB)
    GPIO_INFO_MAP(B);
#endif
#if defined(GPIOC)
    GPIO_INFO_MAP(C);
#endif
#if defined(GPIOD)
    GPIO_INFO_MAP(D);
#endif
#if defined(GPIOE)
    GPIO_INFO_MAP(E);
#endif
#if defined(GPIOF)
    GPIO_INFO_MAP(F);
#endif
#if defined(GPIOG)
    GPIO_INFO_MAP(G);
#endif
#if defined(GPIOH)
    GPIO_INFO_MAP(H);
#endif
#if defined(GPIOI)
    GPIO_INFO_MAP(I);
#endif
#if defined(GPIOJ)
    GPIO_INFO_MAP(J);
#endif
#if defined(GPIOK)
    GPIO_INFO_MAP(K);
#endif
}

static void hc32_pin_write(struct os_device *dev, os_base_t pin, os_base_t value)
{
    const struct pin_index *index;

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return;
    }

    Gpio_WriteOutputIO(index->gpio_port, PIN_OFFSET(pin), (boolean_t)value);
}

static int hc32_pin_read(struct os_device *dev, os_base_t pin)
{
    int                     value;
    const struct pin_index *index;

    value = PIN_LOW;

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return value;
    }

    value = Gpio_GetInputIO(index->gpio_port, PIN_OFFSET(pin));

    return value;
}

static void hc32_pin_mode(struct os_device *dev, os_base_t pin, os_base_t mode)
{
    struct pin_index *index;
    stc_gpio_cfg_t    GPIO_Cfg;

#if (PIN_PULL_STATE)
    os_base_t         level;
#endif

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return;
    }

    /* Configure GPIO_InitStructure */
    GPIO_Cfg.enCtrlMode = GpioAHB;
    GPIO_Cfg.enDrv = GpioDrvH;

    switch(mode) {
        case PIN_MODE_OUTPUT:
            /* output setting */
            GPIO_Cfg.enDir = GpioDirOut;
            GPIO_Cfg.enPd = GpioPdDisable;
            GPIO_Cfg.enPu = GpioPuDisable;
            break;
        case PIN_MODE_INPUT:
            /* input setting: not pull. */
            GPIO_Cfg.enDir = GpioDirIn;
            GPIO_Cfg.enPd = GpioPdDisable;
            GPIO_Cfg.enPu = GpioPuDisable;
            break;

        case PIN_MODE_INPUT_PULLUP:
            /* input setting: pull up. */
            GPIO_Cfg.enDir = GpioDirIn;
            GPIO_Cfg.enPd = GpioPdDisable;
            GPIO_Cfg.enPu = GpioPuEnable;

            break;
        case PIN_MODE_INPUT_PULLDOWN:

            /* input setting: pull down. */
            GPIO_Cfg.enDir = GpioDirIn;
            GPIO_Cfg.enPd = GpioPdEnable;
            GPIO_Cfg.enPu = GpioPuDisable;
            break;
        case PIN_MODE_OUTPUT_OD:
            /* output setting: od. */
            GPIO_Cfg.enDir = GpioDirOut;
            GPIO_Cfg.enPd = GpioPdDisable;
            GPIO_Cfg.enPu = GpioPuDisable;
            GPIO_Cfg.enOD = GpioOdEnable;

            break;

        default:

            break;
    }
#if (PIN_PULL_STATE)
    /* remeber the pull state. */
    level = os_irq_lock();
    index->pin_pulls[__PIN_INDEX(pin)].pull_up   = GPIO_Cfg.enPu;
    index->pin_pulls[__PIN_INDEX(pin)].pull_down = GPIO_Cfg.enPd;
    os_irq_unlock(level);
#endif
    Gpio_Init(index->gpio_port, PIN_OFFSET(pin), &GPIO_Cfg);
}

    static os_err_t
hc32_pin_attach_irq(struct os_device *device, os_int32_t pin, os_uint32_t mode, void (*hdr)(void *args), void *args)
{
    const struct pin_index *index;
    os_base_t               level;
    struct pin_irq_param   *irq;
    struct pin_irq_param   *tmp;

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return OS_ENOSYS;
    }

    irq = os_calloc(1, sizeof(struct pin_irq_param));
    OS_ASSERT(irq != OS_NULL);

    level = os_irq_lock();
    os_list_for_each_entry(tmp, &hc_gpio_irq_list, struct pin_irq_param, list)
    {
        if(tmp->pin == pin)
        {
            if(tmp->hdr  == hdr   &&
                    tmp->mode == mode  &&
                    tmp->args == args)
            {
                os_irq_unlock(level);
                os_free(irq);
                return OS_EOK;
            }
            else
            {
                os_irq_unlock(level);
                os_free(irq);
                return OS_EBUSY;
            }
        }
    }

    irq->pin  = pin;
    irq->hdr  = hdr;
    irq->mode = mode;
    irq->args = args;

    os_list_add_tail(&hc_gpio_irq_list, &irq->list);
    os_irq_unlock(level);
    return OS_EOK;
}

static os_err_t hc32_pin_dettach_irq(struct os_device *device, os_int32_t pin)
{
    const struct pin_index *index;
    os_base_t               level;
    struct pin_irq_param   *irq;

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return OS_ENOSYS;
    }

    level = os_irq_lock();
    os_list_for_each_entry(irq, &hc_gpio_irq_list, struct pin_irq_param, list)
    {
        if(irq->pin == pin)
        {
            os_list_del(&irq->list);
            os_irq_unlock(level);
            return OS_EOK;
        }
    }
    os_irq_unlock(level);
    return OS_EEMPTY;
}

static os_err_t hc32_pin_irq_enable(struct os_device *device, os_base_t pin, os_uint32_t enabled)
{
    const struct pin_index   *index;
    os_base_t                 level;
    struct pin_irq_param     *irq;

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return OS_ENOSYS;
    }

    if (enabled == PIN_IRQ_ENABLE)
    {
        level = os_irq_lock();
        if(pState[__PORT_INDEX(pin)]->ref == (os_uint8_t)(~0))
        {
            os_irq_unlock(level);
            return OS_ERROR;
        }

        os_list_for_each_entry(irq, &hc_gpio_irq_list, struct pin_irq_param, list)
        {
            if(irq->pin == pin)
            {
                if(irq->irq_ref > 0)
                {
                    os_irq_unlock(level);
                    return OS_EOK;
                }

                switch (irq->mode)
                {
                    case PIN_IRQ_MODE_RISING:
                        Gpio_EnableIrq(index->gpio_port, PIN_OFFSET(pin), GpioIrqRising);
                        break;
                    case PIN_IRQ_MODE_FALLING:
                        Gpio_EnableIrq(index->gpio_port, PIN_OFFSET(pin), GpioIrqFalling);
                        break;
                    case PIN_IRQ_MODE_HIGH_LEVEL:
                        Gpio_EnableIrq(index->gpio_port, PIN_OFFSET(pin), GpioIrqHigh);
                        break;
                    case PIN_IRQ_MODE_LOW_LEVEL:
                        Gpio_EnableIrq(index->gpio_port, PIN_OFFSET(pin), GpioIrqLow);
                        break;
                    case PIN_IRQ_MODE_RISING_FALLING:
                    default:
                        os_irq_unlock(level);
                        return OS_ENOSYS;
                }
                irq->irq_ref++;
                if(pState[__PORT_INDEX(pin)]->ref == 0)
                {
                    EnableNvic(pState[__PORT_INDEX(pin)]->irq, IrqLevel3, TRUE);
                }
                pState[__PORT_INDEX(pin)]->ref++;
                os_irq_unlock(level);
            }
        }
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        level = os_irq_lock();

        if(pState[__PORT_INDEX(pin)]->ref == 0)
        {
            os_irq_unlock(level);
            return OS_ERROR;
        }

        os_list_for_each_entry(irq, &hc_gpio_irq_list, struct pin_irq_param, list)
        {
            if(irq->pin == pin)
            {
                if(irq->irq_ref == 0)
                {
                    os_irq_unlock(level);
                    return OS_EOK;
                }

                switch (irq->mode)
                {
                    case PIN_IRQ_MODE_RISING:
                        Gpio_DisableIrq(index->gpio_port, PIN_OFFSET(pin), GpioIrqRising);
                        break;
                    case PIN_IRQ_MODE_FALLING:
                        Gpio_DisableIrq(index->gpio_port, PIN_OFFSET(pin), GpioIrqFalling);
                        break;
                    case PIN_IRQ_MODE_HIGH_LEVEL:
                        Gpio_DisableIrq(index->gpio_port, PIN_OFFSET(pin), GpioIrqHigh);
                        break;
                    case PIN_IRQ_MODE_LOW_LEVEL:
                        Gpio_DisableIrq(index->gpio_port, PIN_OFFSET(pin), GpioIrqLow);
                        break;
                    case PIN_IRQ_MODE_RISING_FALLING:
                    default:
                        os_irq_unlock(level);
                        return OS_ENOSYS;
                }

                irq->irq_ref--;
                pState[__PORT_INDEX(pin)]->ref--;
                if(pState[__PORT_INDEX(pin)]->ref == 0)
                {
                    EnableNvic(pState[__PORT_INDEX(pin)]->irq, IrqLevel3, FALSE);
                }

                os_irq_unlock(level);
            }
        }

    }
    else
    {
        return OS_ENOSYS;
    }
    return OS_EOK;
}

int os_hw_pin_init(void)
{
    struct pin_index *tmp = OS_NULL;
    os_uint8_t gpio_port = 0;

#if (PIN_PULL_STATE)
    os_uint8_t gpio_pin = 0;
#endif

    Sysctrl_SetPeripheralGate(SysctrlPeripheralGpio, TRUE);
    __os_hw_pin_init();

    for(gpio_port = 0; gpio_port < GPIO_PORT_MAX; gpio_port++)
    {
        if((gpio_port_map & (1 << gpio_port)))
        {
            tmp = (struct pin_index *)os_calloc(1, sizeof(struct pin_index));

            OS_ASSERT(tmp != OS_NULL);

            tmp->gpio_port = gpio_port_base[gpio_port];
#if (PIN_PULL_STATE)
            for(gpio_pin = 0; gpio_pin < GPIO_PIN_PER_PORT; gpio_pin++)
            {
                tmp->pin_pulls[gpio_pin].pull_up   = 0;
                tmp->pin_pulls[gpio_pin].pull_down = 0;
            }
#endif
            indexs[gpio_port] = tmp;

        }
        else
        {
            indexs[gpio_port] = OS_NULL;
        }
    }
#if !defined(OS_USING_DRIVER_SIMPLE)
    return os_device_pin_register(0, &_hc32_pin_ops, OS_NULL);
#else
    return OS_EOK;
#endif
}
